--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
 
 body{
     font-family: 'Lato', sans-serif;
+    background-image: url('./fondoboke.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 h2{
