--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h2{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /*justify-content: center;*/
 }
 
 .countdown{
