--- a/style.css
+++ b/style.css
@@ -41,3 +41,13 @@ h2{
   /*  width: auto;*/
     height: 50vh;
 }
+
+
+/** Responsive **/
+@media only screen and (max-width: 600px) {
+    body {
+        background-image: url('./fondoboke.jpeg');
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+  }
