--- a/style.css
+++ b/style.css
@@ -53,7 +53,11 @@ h2{
 
 
     h2{
-        font-size: 1.5rem;
+        font-size: 1.75rem;
         font-weight: bold;
+    }
+
+    .day, .hour, .minute, .second{
+        font-size: 1rem;
     }
   }
