Boke update Lali 5.4

--- a/style.css
+++ b/style.css
@@ -57,7 +57,12 @@ h2{
         font-weight: bold;
     }
 
+    h3{
+        font-size: 1rem;
+    }
+
     .day, .hour, .minute, .second{
         font-size: 1rem;
+        font-weight: bold;
     }
   }
