Boke update Lali 5.9

--- a/style.css
+++ b/style.css
@@ -59,9 +59,10 @@ h2{
     .mark{
         display: flex;
         justify-content: flex-end;
+    }
+    .mark-p{
         font-size: 0.5;
     }
-
 
     h2{
         font-size: 1.75rem;
