--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ body{
 .mark{
     display: flex;
     justify-content: flex-end;
+
+}
+.mark-p{
+    font-size: 1rem;
+    font-style: italic;
+    margin-right: 10px;
 }
 
 h2{
@@ -61,7 +67,9 @@ h2{
         justify-content: flex-end;
     }
     .mark-p{
-        font-size: 0.5;
+        font-size: 10px;
+        font-style: italic;
+        margin-right: 10px;
     }
 
     h2{
