--- a/style.css
+++ b/style.css
@@ -70,7 +70,9 @@ h2{
     }
     .mark-p{
         font-size: 10px;
-        margin: 10px;
+        margin-top: 10px;
+        margin-left: 10px;
+        margin-right: 10px;
     }
 
     h2{
