credits and mktg 7

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h2{
 }
 
 .comming-soon{
-    min-height: 100vh;
+    /*min-height: 100vh;*/
     display: flex;
     flex-direction: column;
     align-items: center;
