--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ h2{
         background-image: url('./fondobokeresponsive2.jpeg');
         background-size: cover;
         background-repeat: no-repeat;
+        min-height: 100vh;
     }
 
     .mark{
