--- a/style.css
+++ b/style.css
@@ -77,16 +77,16 @@ h2{
     }
 
     h2{
-        font-size: 1.75rem;
+        font-size: 1.5rem;
         font-weight: bold;
     }
 
     h3{
-        font-size: 1rem;
+        font-size: 14px;
     }
 
     .day, .hour, .minute, .second{
-        font-size: 1rem;
+        font-size: 14px;
         font-weight: bold;
     }
   }
