--- a/style.css
+++ b/style.css
@@ -33,11 +33,11 @@ h2{
 }
 
 .comming-soon{
-    /*min-height: 100vh;*/
+    
     display: flex;
     flex-direction: column;
     align-items: center;
-    /*justify-content: center;*/
+
 }
 
 .countdown{
@@ -62,6 +62,7 @@ h2{
         background-image: url('./bokemobile2.jpeg');
         background-size: cover;
         background-repeat: no-repeat;
+        background-position: center center;
         min-height: 100vh;
     }
 
