--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body{
     font-family: 'Lato', sans-serif;
-    background-image: url('./fondobokeresponsive2.jpeg');
+    background-image: url('./fondoboke.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -59,7 +59,7 @@ h2{
 /** Responsive **/
 @media only screen and (max-width: 600px) {
     body {
-        background-image: url('./bokemobile3.jpeg');
+        background-image: url('./fondobokeresponsive2.jpeg');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
