--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h2{
 /** Responsive **/
 @media only screen and (max-width: 600px) {
     body {
-        background-image: url('./fondobokeresponsive2.jpeg');
+        background-image: url('./chiquitusmobile.jpeg');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
