--- a/style.css
+++ b/style.css
@@ -55,6 +55,12 @@ h2{
     height: 50vh;
 }
 
+.container-rival{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 15px;
+}
 
 /** Responsive **/
 @media only screen and (max-width: 600px) {
@@ -94,5 +100,9 @@ h2{
     .day, .hour, .minute, .second{
         font-size: 14px;
         font-weight: bold;
+    }
+
+    .container-rival{
+        font-size: 12px;
     }
   }
