--- a/style.css
+++ b/style.css
@@ -104,5 +104,9 @@ h2{
 
     .container-rival{
         font-size: 12px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        margin: 7px;
     }
   }
