--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ h2{
 
 .container-rival{
     display:flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: flex-end;
     margin: 15px;
 }
 
