liga nueva test 5

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ h2{
         background-repeat: no-repeat;
         background-position: center center;
         min-height: 100vh;
+        color: gold;
     }
 
     .mark{
