--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ h2{
         justify-content: flex-end;
     }
     .mark-p{
-        /*color: #ffdd70;*/
+        color: #ffdd70;
         font-size: 10px;
         margin-top: 10px;
         margin-left: 10px;
@@ -92,7 +92,7 @@ h2{
     }
 
     .comming-soon{
-        color: #000;
+        color:gold;
     }
 
     h3{
