--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ h2{
 /** Responsive **/
 @media only screen and (max-width: 600px) {
     body {
-        background-image: url('./golcavani.gif');
+        background-image: url('./bokemobile4.jpeg');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
@@ -92,7 +92,7 @@ h2{
     }
 
     .comming-soon{
-        color:gold;
+        color:#000;
     }
 
     h3{
