--- a/style.css
+++ b/style.css
@@ -64,7 +64,9 @@ h2{
 }
 
 .logovs{
-    max-width: 20px; height: 20px; margin: 0px; width: 20px;
+    width: 30px;
+    height: 30px;
+    margin: 0px; 
 }
 
 /** Responsive **/
