--- a/style.css
+++ b/style.css
@@ -70,6 +70,10 @@ h2{
     padding: 0px;
 }
 
+.rival{
+    vertical-align: bottom;
+}
+
 /** Responsive **/
 @media only screen and (max-width: 600px) {
     body {
