--- a/style.css
+++ b/style.css
@@ -55,6 +55,21 @@ h2{
     height: 50vh;
 }
 
+.container-data{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.container-date{
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 15px;
+    font-weight: 600;
+}
+
+
 .container-rival{
     display:flex;
     flex-direction: column;
@@ -69,6 +84,16 @@ h2{
     margin: 0px; 
     padding: 0px;
     vertical-align: bottom;
+}
+
+.match-date{
+    /*background-color: #fbcb5b;*/
+    background-color: #133b5b;
+    color: gold;
+    padding: 0px 7px;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    opacity: 70%;
 }
 
 .tournament{
@@ -122,6 +147,14 @@ h2{
     .day, .hour, .minute, .second{
         font-size: 14px;
         font-weight: bold;
+    }
+
+    .container-date{
+        font-size: 12px;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        margin: 7px;
     }
 
     .container-rival{
