--- a/style.css
+++ b/style.css
@@ -60,14 +60,14 @@ h2{
     flex-direction: row;
     justify-content: space-around;
 }
-
+/*
 .container-date{
     display:flex;
     flex-direction: column;
     align-items: flex-start;
     margin: 15px;
     font-weight: 600;
-}
+}*/
 
 
 .container-rival{
@@ -149,13 +149,13 @@ h2{
         font-weight: bold;
     }
 
-    .container-date{
+  /*  .container-date{
         font-size: 12px;
         display: flex;
         flex-direction: column;
         align-items: start;
         margin: 7px;
-    }
+    }*/
 
     .container-rival{
         font-size: 12px;
