--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ h2{
 .container-rival{
     display:flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     margin: 15px;
     font-weight: 600;
 }
