--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ h2{
         font-size: 12px;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-end;
         margin: 7px;
     }
 
